[package]
name = "tee-tee-http"
version = "0.1.0"
edition = "2021"

[net]
git-fetch-with-cli = true

[dependencies]
game-interface = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
client-render-base = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
client-render-game = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
client-render = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
client-containers = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
graphics = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
graphics-backend = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
graphics-backend-traits = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
graphics-types = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
base = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
base-io = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
base-fs = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
base-http = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
config = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
math = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
pool = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
ui-base = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
sound = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }
sound-backend = { git = "https://github.com/Jupeyy/dd-pg.git", rev = "1054447b3ba57e5a18169250e96bc1fe5a54b4fb" }

axum = { version = "0.6.20", features = ["headers"] }
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "sync", "fs", "time", "macros"] }
rayon = "1.7.0"
tokio-util = { version = "0.7.8", features = ["io"] }
palette = "0.7.3"
anyhow = { version = "1.0.86", features = ["backtrace"] }
env_logger = "0.11.5"
parking_lot = "0.12.3"
dotenvy = "0.15.7"
serde_json = "1.0.125"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
urlencoding = "2.1.3"

serenity = { git = "https://github.com/serenity-rs/serenity", rev = "2bb56baf63d8f65246f075f1922d2d0571ae0cb5" }
